<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="550dp"
        android:minWidth="350dp"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_checkout"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_confirm_this_checkout_with_bill_amount"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmCheckoutButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/primary_button_background"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cancelCheckoutButton"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelCheckoutButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/cancel_button_background"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>